# rust-ffmpeg-gif-maker

./: CHANGELOG  Cargo.toml  README.md
docs/: lib.md
examples/: how_to.rs  how_to_async.rs
src/: converter.rs  lib.rs  time_parsing.rs
